# S-Translate

./: .coveragerc  .gitignore  .gitlab-ci.yml  LICENSE  README.md  gitlab-ci.yml  pyproject.toml  tox.ini
s_translation/: __init__.py  gettext.py  message_creator.py  settings.py
s_translation/utils/: __init__.py  print_color.py
tests/: .env  base_test_case.py  example.py  filetest1.py  filetest2.py  main.py  settings.py  test_message_creator.py  test_message_creator_with_env.py
tests/child_dir/: example.py
tests/sub_dir/: filetest3.py
