[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s_translation"
version = "1.0.0"
authors = [
  { name="Bang Phan", email="ptbang@gmail.com" },
]
description = "A package for easily using gettext in python projects"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "dotenv",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

[tool.hatch.build]
include = ["src/s_translation"]
