[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s-translation"
version = "1.0.0"
authors = [
  { name="Bang Phan", email="ptbang@gmail.com" },
]
description = "A package for easy creating and using translated messages withgettext in python projects"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "python-dotenv",
]

[project.urls]
"Homepage" = "https://github.com/ptbang/S-Translate"
"Bug Tracker" = "https://github.com/ptbang/S-Translate/issues"

[tool.hatch.build]
include = ["s_translation"]
